backend/static/css/styles.css
:root {
    --orange: rgba(255, 182, 113, 0.5);
    --blue: rgba(173, 216, 230, 0.5);
    --red: rgba(255, 105, 97, 0.5);
    --purple: rgba(221, 160, 221, 0.5);
    --green: rgba(119, 221, 119, 0.5);
    --brown: rgba(195, 176, 145, 0.5);
}

body {
    font-family: Arial, sans-serif;
    background-color: #f4f4f4;
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
    margin: 0;
    padding: 0;
    overflow-y: auto;
}

h1 {
    text-align: center;
    margin: 20px 0;
    font-family: "Lucida Handwriting", Arial, sans-serif;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 20px;
    margin: auto;
    box-sizing: border-box;
}

#grid {
    display: grid;
    grid-template-columns: repeat(10, 30px); /* Set explicit size for cells */
    grid-gap: 5px;
    padding: 10px; /* Add padding to ensure grid stays inside container */
    box-sizing: border-box;
    width: fit-content; /* Ensure width fits content */
}

.cell {
    width: 30px;
    height: 30px;
    border: 1px solid #ccc;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #fff;
    cursor: pointer;
    user-select: none;
    position: relative;
}

    .cell::after {
        content: '';
        position: absolute;
        top: 50%;
        left: 50%;
        width: 15px;
        height: 15px;
        transform: translate(-50%, -50%);
        pointer-events: none;
    }

    .cell.selected.dragging {
        background-color: rgba(163, 190, 255, 0.5); /* light blue with opacity */
    }

    .cell.selected {
        background-color: #a1c4fd;
    }

    .cell.found {
        position: relative;
    }

        .cell.found.orange {
            background-color: var(--orange);
        }

        .cell.found.blue {
            background-color: var(--blue);
        }

        .cell.found.red {
            background-color: var(--red);
        }

        .cell.found.purple {
            background-color: var(--purple);
        }

        .cell.found.green {
            background-color: var(--green);
        }

        .cell.found.brown {
            background-color: var(--brown);
        }

.controls {
    margin: 20px;
}

#words-list {
    margin-top: 20px;
    max-height: 200px;
    overflow-y: auto;
}

    #words-list li.found {
        text-decoration: line-through;
        color: #9acd32;
    }

svg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
}

#found-lines {
    z-index: 1;
}

#drag-lines {
    z-index: 2;
}

